[package]
name = "b58"
version = "0.1.1"
edition = "2024"
description = "A Base58 encoding/decoding library with no external dependencies"
license = "MIT"
repository = "https://github.com/cmackenzie1/base58-rs"
documentation = "https://docs.rs/b58"
readme = "README.md"
keywords = ["base58", "encoding", "decoding", "bitcoin", "crypto"]
categories = ["encoding", "cryptography"]

[dependencies]
